--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-styled-components": "^2.0.11",
+    "netlify-lambda": "^0.3.1",
     "react-helmet": "^5.2.0",
     "styled-components": "^3.2.5"
   },
