--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-styled-components": "^2.0.11",
     "netlify-lambda": "^0.3.1",
+    "node-fetch": "^2.1.2",
     "react-helmet": "^5.2.0",
     "styled-components": "^3.2.5"
   },
