--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-plugin-react-helmet": "^2.0.8",
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-styled-components": "^2.0.11",
+    "modern-normalize": "^0.4.0",
     "netlify-lambda": "^0.3.1",
     "node-fetch": "^2.1.2",
     "react-helmet": "^5.2.0",
@@ -23,9 +24,10 @@
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
-    "develop": "gatsby develop",
+    "develop": "gatsby develop -H 0.0.0.0",
     "format": "prettier --write 'src/**/*.js'",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "functions": "netlify-lambda serve /functions-source"
   },
   "devDependencies": {
     "prettier": "^1.11.1"
