--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "gatsby-plugin-react-next": "^1.0.11",
     "gatsby-plugin-styled-components": "^2.0.11",
     "modern-normalize": "^0.4.0",
-    "netlify-lambda": "^0.3.1",
+    "netlify-lambda": "huntercaron/netlify-lambda",
     "react-helmet": "^5.2.0",
     "styled-components": "^3.2.5"
   },
